--- a/tests/notebooks/displacy.ipynb
+++ b/tests/notebooks/displacy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,23 +12,7 @@
       "\n",
       "\u001b[93m    Serving on port 5000...\u001b[0m\n",
       "    Using the 'dep' visualizer\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [21/Sep/2018 23:27:31] \"GET / HTTP/1.1\" 200 3057\n",
-      "127.0.0.1 - - [21/Sep/2018 23:27:31] \"GET /favicon.ico HTTP/1.1\" 200 3057\n",
-      "127.0.0.1 - - [21/Sep/2018 23:29:16] \"GET / HTTP/1.1\" 200 3057\n",
-      "127.0.0.1 - - [21/Sep/2018 23:29:16] \"GET /favicon.ico HTTP/1.1\" 200 3057\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "\n",
       "    Shutting down server on port 5000.\n",
       "\n"
@@ -37,11 +21,10 @@
    ],
    "source": [
     "import spacy\n",
-    "from spacy import displacy\n",
     "\n",
     "nlp = spacy.load('en')\n",
     "doc = nlp(u'This is a sentence.')\n",
-    "displacy.serve(doc, style='dep')"
+    "spacy.displacy.serve(doc, style='dep')"
    ]
   },
   {
