--- a/tests/notebooks/displacy.ipynb
+++ b/tests/notebooks/displacy.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[93m    Serving on port 5000...\u001b[0m\n",
-      "    Using the 'dep' visualizer\n",
-      "\n",
-      "\n",
-      "    Shutting down server on port 5000.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "\n",
@@ -29,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,23 +25,6 @@
       "\n",
       "\u001b[93m    Serving on port 5000...\u001b[0m\n",
       "    Using the 'ent' visualizer\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [21/Sep/2018 23:30:24] \"GET / HTTP/1.1\" 200 4108\n",
-      "127.0.0.1 - - [21/Sep/2018 23:30:24] \"GET /favicon.ico HTTP/1.1\" 200 4108\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    Shutting down server on port 5000.\n",
       "\n"
      ]
     }
@@ -76,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +608,17 @@
     }
    ],
    "source": [
+    "import spacy\n",
+    "from spacy import displacy\n",
     "from IPython.core.display import display, HTML\n",
+    "\n",
+    "text = \"\"\"But Google is starting from behind. The company made a late push\n",
+    "into hardware, and Apple’s Siri, available on iPhones, and Amazon’s Alexa\n",
+    "software, which runs on its Echo and Dot devices, have clear leads in\n",
+    "consumer adoption.\"\"\"\n",
+    "\n",
+    "nlp = spacy.load('en')\n",
+    "doc = nlp(text)\n",
     "\n",
     "html = displacy.render(doc, style='dep')\n",
     "display(HTML(html))"
