--- a/tests/notebooks/tests/test_api_nlp.ipynb
+++ b/tests/notebooks/tests/test_api_nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,310 +10,58 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"entities\": [\n",
-      "        {\n",
-      "            \"label\": \"DATE\",\n",
-      "            \"text\": \"the last couple of years\",\n",
-      "            \"start_char\": 87,\n",
-      "            \"end_char\": 111\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"DATE\",\n",
-      "            \"text\": \"this week\",\n",
-      "            \"start_char\": 117,\n",
-      "            \"end_char\": 126\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"Google\",\n",
-      "            \"start_char\": 128,\n",
-      "            \"end_char\": 134\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"the Google Brain\",\n",
-      "            \"start_char\": 291,\n",
-      "            \"end_char\": 307\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"Google\",\n",
-      "            \"start_char\": 335,\n",
-      "            \"end_char\": 341\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"AI\",\n",
-      "            \"start_char\": 635,\n",
-      "            \"end_char\": 637\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"Google Brain\",\n",
-      "            \"start_char\": 919,\n",
-      "            \"end_char\": 931\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"Microsoft\",\n",
-      "            \"start_char\": 933,\n",
-      "            \"end_char\": 942\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"AI\\n\\n\",\n",
-      "            \"start_char\": 980,\n",
-      "            \"end_char\": 984\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"Peter W. Battaglia\",\n",
-      "            \"start_char\": 1115,\n",
-      "            \"end_char\": 1133\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"Google's DeepMind\",\n",
-      "            \"start_char\": 1137,\n",
-      "            \"end_char\": 1154\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"LOC\",\n",
-      "            \"text\": \"Google Brain\",\n",
-      "            \"start_char\": 1188,\n",
-      "            \"end_char\": 1200\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"MIT\",\n",
-      "            \"start_char\": 1202,\n",
-      "            \"end_char\": 1205\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"the University of Edinburgh\",\n",
-      "            \"start_char\": 1211,\n",
-      "            \"end_char\": 1238\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"CARDINAL\",\n",
-      "            \"text\": \"one\",\n",
-      "            \"start_char\": 1317,\n",
-      "            \"end_char\": 1320\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"GPE\",\n",
-      "            \"text\": \"Battaglia\",\n",
-      "            \"start_char\": 1356,\n",
-      "            \"end_char\": 1365\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"GPE\",\n",
-      "            \"text\": \"AI\",\n",
-      "            \"start_char\": 1472,\n",
-      "            \"end_char\": 1474\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"CARDINAL\",\n",
-      "            \"text\": \"one\",\n",
-      "            \"start_char\": 1756,\n",
-      "            \"end_char\": 1759\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"HCM\",\n",
-      "            \"start_char\": 1786,\n",
-      "            \"end_char\": 1789\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"Dayforce\",\n",
-      "            \"start_char\": 1794,\n",
-      "            \"end_char\": 1802\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"Oracle HCM\",\n",
-      "            \"start_char\": 1807,\n",
-      "            \"end_char\": 1817\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"HCM\",\n",
-      "            \"start_char\": 1873,\n",
-      "            \"end_char\": 1876\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"CARDINAL\",\n",
-      "            \"text\": \"20\",\n",
-      "            \"start_char\": 1948,\n",
-      "            \"end_char\": 1950\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"CARDINAL\",\n",
-      "            \"text\": \"More than 160\",\n",
-      "            \"start_char\": 2082,\n",
-      "            \"end_char\": 2095\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"Select Hub\\n\",\n",
-      "            \"start_char\": 2158,\n",
-      "            \"end_char\": 2169\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"GPE\",\n",
-      "            \"text\": \"AI\",\n",
-      "            \"start_char\": 2343,\n",
-      "            \"end_char\": 2345\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"NYU\",\n",
-      "            \"start_char\": 2355,\n",
-      "            \"end_char\": 2358\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"Gary Marcus\",\n",
-      "            \"start_char\": 2369,\n",
-      "            \"end_char\": 2380\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PRODUCT\",\n",
-      "            \"text\": \"Google Next\",\n",
-      "            \"start_char\": 2913,\n",
-      "            \"end_char\": 2924\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"GPE\",\n",
-      "            \"text\": \"AI\",\n",
-      "            \"start_char\": 2948,\n",
-      "            \"end_char\": 2950\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"DATE\",\n",
-      "            \"text\": \"more than a decade\",\n",
-      "            \"start_char\": 3023,\n",
-      "            \"end_char\": 3041\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"DATE\",\n",
-      "            \"text\": \"now\",\n",
-      "            \"start_char\": 3042,\n",
-      "            \"end_char\": 3045\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"LOC\",\n",
-      "            \"text\": \"Google Brain\",\n",
-      "            \"start_char\": 3124,\n",
-      "            \"end_char\": 3136\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"LSTM\",\n",
-      "            \"start_char\": 3516,\n",
-      "            \"end_char\": 3520\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PRODUCT\",\n",
-      "            \"text\": \"Google AI\",\n",
-      "            \"start_char\": 3626,\n",
-      "            \"end_char\": 3635\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"Google Brain\",\n",
-      "            \"start_char\": 3824,\n",
-      "            \"end_char\": 3836\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"Deep Mind\",\n",
-      "            \"start_char\": 3838,\n",
-      "            \"end_char\": 3847\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"MIT\",\n",
-      "            \"start_char\": 3849,\n",
-      "            \"end_char\": 3852\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"University of Edinburgh\",\n",
-      "            \"start_char\": 3854,\n",
-      "            \"end_char\": 3877\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"CARDINAL\",\n",
-      "            \"text\": \"one\",\n",
-      "            \"start_char\": 3931,\n",
-      "            \"end_char\": 3934\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"NORP\",\n",
-      "            \"text\": \"Graphs\",\n",
-      "            \"start_char\": 3962,\n",
-      "            \"end_char\": 3968\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"WORK_OF_ART\",\n",
-      "            \"text\": \"Graphs\",\n",
-      "            \"start_char\": 4081,\n",
-      "            \"end_char\": 4087\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"DATE\",\n",
-      "            \"text\": \"this week\",\n",
-      "            \"start_char\": 4538,\n",
-      "            \"end_char\": 4547\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"Google\",\n",
-      "            \"start_char\": 4614,\n",
-      "            \"end_char\": 4620\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"TensorFlow AI\",\n",
-      "            \"start_char\": 4623,\n",
-      "            \"end_char\": 4636\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"TPU\",\n",
-      "            \"start_char\": 4686,\n",
-      "            \"end_char\": 4689\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"CARDINAL\",\n",
-      "            \"text\": \"3.0\",\n",
-      "            \"start_char\": 4690,\n",
-      "            \"end_char\": 4693\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"ORG\",\n",
-      "            \"text\": \"Battaglia & Co.\",\n",
-      "            \"start_char\": 4846,\n",
-      "            \"end_char\": 4861\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"AI\",\n",
-      "            \"start_char\": 5709,\n",
-      "            \"end_char\": 5711\n",
-      "        },\n",
-      "        {\n",
-      "            \"label\": \"PERSON\",\n",
-      "            \"text\": \"AI\",\n",
-      "            \"start_char\": 5823,\n",
-      "            \"end_char\": 5825\n",
-      "        }\n",
-      "    ],\n",
+      "    \"entities\": [],\n",
       "    \"text\": \"\",\n",
-      "    \"relations\": []\n",
+      "    \"relations\": [\n",
+      "        [\n",
+      "            \"Minister Yuval Steinitz\",\n",
+      "            \"said\",\n",
+      "            null,\n",
+      "            \"Sunday that\"\n",
+      "        ],\n",
+      "        [\n",
+      "            \"Israel\",\n",
+      "            \"overthrow\",\n",
+      "            \"Hamas\",\n",
+      "            null\n",
+      "        ],\n",
+      "        [\n",
+      "            \"Minister Yuval Steinitz\",\n",
+      "            \"attends\",\n",
+      "            \"Knesset\",\n",
+      "            \"May 23, 2018\"\n",
+      "        ],\n",
+      "        [\n",
+      "            \"Haaretz\",\n",
+      "            \"reported\",\n",
+      "            null,\n",
+      "            \"Sunday that\"\n",
+      "        ],\n",
+      "        [\n",
+      "            \"the\",\n",
+      "            \"day on\",\n",
+      "            null,\n",
+      "            \"August 9\"\n",
+      "        ],\n",
+      "        [\n",
+      "            \"Palestinian\",\n",
+      "            \"reports of\",\n",
+      "            \"strike\",\n",
+      "            null\n",
+      "        ],\n",
+      "        [\n",
+      "            \"7,000\",\n",
+      "            \"acres of\",\n",
+      "            \"land\",\n",
+      "            null\n",
+      "        ],\n",
+      "        [\n",
+      "            \"Mazen Faqha\",\n",
+      "            \"official\",\n",
+      "            \"Hamas\",\n",
+      "            null\n",
+      "        ]\n",
+      "    ]\n",
       "}\n"
      ]
     }
@@ -322,7 +70,7 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "file = '../../docs/text4'\n",
+    "file = '../../docs/text6'\n",
     "with open(file, 'r') as f:\n",
     "    text = f.read()\n",
     "    data = {'text': text, 'model': 'en'}\n",
